--- a/css/main.css
+++ b/css/main.css
@@ -6,30 +6,7 @@ font-family: 'Lato', sans-serif;
 
 }
 
-#menu-principal{
-	width: 80%;
-	margin: 0 auto;
-	background-color: whitesmoke;
-}
-
-#menu-principal ul {
-	list-style: none;
-	padding-left: 0;
-}
-
-#menu-principal li{
-	display: inline-block;
-}
-
-#menu-principal ul li a{
-	text-decoration: none;
-	color: #3f1851;
-	padding: 20px 60px;
-	padding-left: 130px;
-	display: block;
-}
-
-input[name="mi-input"]{
+input[name="elemento-uno"]{
 	border: 5px solid black;
 }
 
